<Implement User Type Page Association CRUD>

--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -53,7 +53,7 @@
           <span class="action-link" role="button" tabindex="0" (click)="loadEmployeeAttendanceToEdit(attendance.id)" data-toggle="modal"
             data-target="#myModal">{{'Edit'| translate}}</span>
           <span> | </span>
-          <span class="action-link" role="button" tabindex="0" data-toggle="modal" data-target="#myModal1" (click)="deleteEmployeeAttendance(attendance.id)">{{'Delete'|translate}}</span>
+          <span class="action-link" role="button" tabindex="0"  (click)="deleteEmployeeAttendance(attendance.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
     </table>
