--- a/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
+++ b/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
@@ -7,7 +7,7 @@
     </header>
 
     <div class="addbtn">
-      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add New User Type Page'| translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'UserType Page Association'  | translate}}
       </button>
 
     </div>
@@ -31,9 +31,9 @@
         <td class="tablerow col-xs-2 ">{{pageAsso.page.url}}</td>
 
         <td class="tablerow col-xs-3">
-          <span class="action-link" role="button" tabindex="0" (click)="loadPageToEdit(page.id)" data-toggle="modal" data-target="#myModal">{{'Edit'| translate}}</span>
+          <span class="action-link" role="button" tabindex="0" (click)="loadPageAssoToEdit(pageAsso.id)" data-toggle="modal" data-target="#myModal">{{'Edit'| translate}}</span>
           <span> | </span>
-          <span class="action-link" role="button" tabindex="0" (click)="deletePage(page.id)">{{'Delete'|translate}}</span>
+          <span class="action-link" role="button" tabindex="0" (click)="deletePage(pageAsso.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
     </table>
@@ -43,13 +43,13 @@
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <form [formGroup]="pageAssoForm" (ngSubmit)="onPgeFormSubmit()">
+  <form [formGroup]="pageAssoForm" (ngSubmit)="onPageAssoFormSubmit()">
     <div class="modal-dialog modaldialog">
       <div id="snackbar" [innerHTML]="toastMessage"></div>
       <div class="modal-content">
         <div class="modal-header dialog">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h2 class="modal-title modaltitle">{{"Add New User Type Page " |translate}}</h2>
+          <h2 class="modal-title modaltitle">{{'UserType Page Association' |translate}}</h2>
         </div>
         <div class="modal-body">
           <div class="row" style="margin-top: 30px">
@@ -84,21 +84,21 @@
           <table class="table table-striped table-hover table-fixed settable" [mfData]="allPage" #mf="mfDataTable">
             <thead>
               <tr>
-                <th class="col-xs-2">{{ 'No' | translate }}</th>
-                <th class="col-xs-2">{{ 'User Type' | translate }}</th>
+                <th class="col-xs-6">{{ 'No' | translate }}</th>
+                <th class="col-xs-6">{{ 'Page Name' | translate }}</th>
                
               </tr>
             </thead>
             <tr *ngFor="let pageAsso of pageAssoIdData | paginate: { itemsPerPage: 8, currentPage: p} let i = index;">
-              <td class="tablerow col-xs-2">{{i+1}}</td>
-              <td class="tablerow col-xs-2  ">{{pageAsso.pageName}}</td>
+              <td class="tablerow col-xs-6">{{i+1}}</td>
+              <td class="tablerow col-xs-6  ">{{pageAsso}}</td>
             
             </tr>
           </table>
           <div class="savebtn">
             <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!pageAssoForm.valid" (click)="toastMessageDisplay();">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
-      margin-left: 20px;">Close</button>
+      margin-left: 20px;">{{'Close'|translate}}</button>
           </div>
         </div>
       </div>
