<Translate all static text>

--- a/src/app/components/approvals/approvals.component.html
+++ b/src/app/components/approvals/approvals.component.html
@@ -48,7 +48,7 @@
         <p id="response" style="font-size: 15px">Status Update Successfully </p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">{{'Close'|translate}}</button>
       </div>
     </div>
 
