--- a/src/app/components/leave/leave.component.html
+++ b/src/app/components/leave/leave.component.html
@@ -102,7 +102,7 @@
           <div class="savebtn">
             <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!leaveForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
-        margin-left: 20px;">Close</button>
+        margin-left: 20px;">{{'Close'|translate}}</button>
           </div>
         </div>
       </div>
