--- a/src/app/components/daily-task/daily-task.component.html
+++ b/src/app/components/daily-task/daily-task.component.html
@@ -133,7 +133,7 @@
 
           <div class="savebtn">
             <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!dailyTaskForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;margin-left: 20px;">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;margin-left: 20px;">{{'Close'|translate}}</button>
           </div>
         </div>
       </div>
