--- a/src/app/components/employee-type/employee-type.component.html
+++ b/src/app/components/employee-type/employee-type.component.html
@@ -94,7 +94,7 @@
           <div class="savebtn">
             <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!employeetypeForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
-        margin-left: 20px;">Close</button>
+        margin-left: 20px;">{{'Close'|translate}}</button>
           </div>
         </div>
       </div>
