<Try to implement menu functionallity >

--- a/src/app/components/designation/designation.component.html
+++ b/src/app/components/designation/designation.component.html
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!designationForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!designationForm.valid" (click)="displayToastMessage()">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
         margin-left: 20px;">{{'Close'| translate}}</button>
           </div>
