--- a/src/app/components/applyforleave/applyforleave.component.html
+++ b/src/app/components/applyforleave/applyforleave.component.html
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="savebtn">
-        <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!leaveForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
+        <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!leaveForm.valid" (click)="displayToastMessage()">{{'Save'|translate}}</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
     margin-left: 20px;">{{'Close'|translate}}</button>
       </div>
