--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -110,7 +110,7 @@
           </div>
  
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)="validate(); toastMessageDisplay();">{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)="validate(); displayToastMessage();">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
       margin-left: 20px;">{{'Close'|translate}}</button>
           </div>
