--- a/src/app/components/leavetype/leavetype.component.html
+++ b/src/app/components/leavetype/leavetype.component.html
@@ -63,7 +63,7 @@
 
           </div>
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!leavetypeForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!leavetypeForm.valid" (click)="displayToastMessage()">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
           margin-left: 20px;">{{'Close'|translate}}</button>
           </div>
