--- a/src/app/components/usertype/usertype.component.html
+++ b/src/app/components/usertype/usertype.component.html
@@ -74,7 +74,7 @@
             </div>
           </div>
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!enabled"  [disabled]="!usertypeForm.valid" (click)="toastMessageDisplay()" >{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!enabled"  [disabled]="!usertypeForm.valid" (click)="displayToastMessage()" >{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
         margin-left: 20px;">{{'Close'|translate}}</button>
           </div>
