--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,11 +1,7 @@
-.logoutbtn{
-    width: 90px;
-    margin-left: 90%;
-    position: absolute;
-    height: 40px;
-    background-color: #45aed6;
-    margin-top: 13px;
-    float: right;
-    font-size: 17px;
-    z-index: 6000;
+.btn-logout, .label-user-name{
+    margin-top: 15px;
+ }
+
+ .btn-logout{
+     float: right;
  }
