--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,16 +9,19 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="img-responsive navbar-brand" href="index.html"><img style="margin-left: -30px" src="assets/Images/logo.png" alt="logo"></a>
+                    <a class="img-responsive navbar-brand" href="index.html">
+                        <img style="margin-left: -30px" src="assets/Images/logo.png" alt="logo">
+                    </a>
                 </div>
 
                 <div class="col-sm-3 label-user-name" *ngIf="isUserNameVisible">
-                    < User Name to be displayed here>
+                    <span class="userid">{{userid}}</span>
                 </div>
 
                 <div class="col-sm-3" *ngIf="isLogoutBtnVisible">
                     <button class="btn btn-primary btn-logout" type="button" (click)="logout()">Log Out </button>
                 </div>
+
             </div>
         </div>
     </nav>
