--- a/src/app/components/page/page.component.html
+++ b/src/app/components/page/page.component.html
@@ -8,34 +8,34 @@
     <div class="addbtn">
       <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add New Page'| translate}}
       </button>
-      
+
     </div>
     <div layout="row" class="userlist " (load)="startLoadingSpinner()">{{'Pages List' | translate}}</div>
-   
-    <br>
+
     <table class="table table-striped table-hover table-fixed settable" [mfData]="allPage" #mf="mfDataTable">
       <thead>
         <tr>
-          <th class="col-xs-2">{{ 'No' | translate }}</th>
-          <th class="col-xs-2"> {{'menu'|translate}}</th>
-          <th class="col-xs-2">{{ 'pageName' | translate }}</th>
-          <th class="col-xs-2">{{ 'submenu' | translate }}</th>
-          <th class="col-xs-2" style="margin-right: -20px;">{{ 'url' | translate }}</th>
-
-          <th class="col-xs-2" style="margin-left: 20px">Action</th>
+         
+          <th class="col-xs-2">
+            <mfDefaultSorter by="menu">Menu</mfDefaultSorter>
+          </th>
+          <th class="col-xs-3">{{ 'Page Name' | translate }}</th>
+          <th class="col-xs-3">{{ 'Sub Menu' | translate }}</th>
+          <th class="col-xs-2">{{ 'Url' | translate }}</th>
+          <th class="col-xs-2">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let page of allPage | paginate: { itemsPerPage: 8, currentPage: p} let i = index;" >
-        <td class="tablerow col-xs-2">{{i+1}}</td>
-        <td class="tablerow col-xs-2  ">{{page.menu}}</td>
-        <td class="tablerow col-xs-2">{{page.pageName}}</td>
-        <td class="tablerow col-xs-2">{{page.submenu}}</td>
-        <td class="tablerow  col-xs-2" >{{page.url}}</td>
-        <td class="tablerow col-xs-2 ">
-          <span class="action-link" role="button" tabindex="0" (click)="loadPageToEdit(page.id)" data-toggle="modal"
-            data-target="#myModal">{{'Edit'| translate}}</span>
+      <tr *ngFor="let page of mf.data | paginate: { itemsPerPage: 8, currentPage: p} let i= index">
+       
+        <td class="tablerow col-xs-2">{{page.menu}}</td>
+        <td class="tablerow col-xs-3">{{page.pageName}}</td>
+        <td class="tablerow col-xs-3">{{page.submenu}}</td>
+        <td class="tablerow col-xs-2">{{page.url}}</td>
+
+        <td class="tablerow col-xs-2">
+          <span class="action-link" role="button" tabindex="0" (click)="loadPageToEdit(page.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
-          <span class="action-link" role="button" tabindex="0"  (click)="deletePage(page.id)">{{'Delete'|translate}}</span>
+          <span class="action-link" role="button" tabindex="0" (click)="deletePage(page.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
     </table>
@@ -55,12 +55,12 @@
         </div>
         <div class="modal-body">
           <div class="row" style="margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!pageForm.controls['menu'].valid && pageForm.controls['menu'].touched}">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;" [ngClass]="{'has-error':!pageForm.controls['menu'].valid && pageForm.controls['menu'].touched}">
               <label class="label-name control-label">{{ 'Menu' | translate }}</label>
               <br>
-              <input type="text" formControlName="menu" id="menu" class="loginUserid form-control" >
-              
-              <div class ="valid"  id="userid_validation"></div>
+              <input type="text" formControlName="menu" id="menu" class="loginUserid form-control">
+
+              <div class="valid" id="userid_validation"></div>
               <app-control-messages [formGroup]="pageForm" [displayName]="'User Id'" [control]="pageForm.controls['menu']"></app-control-messages>
             </div>
             <div class="col-lg-offset-5">
@@ -88,7 +88,7 @@
             </div>
           </div>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!pageForm.controls['description'].valid && pageForm.controls['description'].touched}">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;" [ngClass]="{'has-error':!pageForm.controls['description'].valid && pageForm.controls['description'].touched}">
               <label class="label-name control-label "> {{ 'Description' | translate }}</label>
               <input type="text" formControlName="description" class="loginUserid form-control" id="Description">
               <app-control-messages [formGroup]="pageForm" [displayName]="'description'" [control]="pageForm.controls['description']"></app-control-messages>
@@ -104,5 +104,3 @@
     </div>
   </form>
 </div>
-
-
