--- a/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
+++ b/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
@@ -6,33 +6,36 @@
     </header>
 
     <div class="addbtn">
-      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'UserType Page Association'  | translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'UserType Page Association' | translate}}
       </button>
 
     </div>
     <div layout="row" class="userlist " (load)="startLoadingSpinner()">{{'Pages List' | translate}}</div>
 
     <br>
-    <table class="table table-striped table-hover table-fixed settable" [mfData]="allPage" #mf="mfDataTable">
+  
+    <table class="table table-striped table-hover table-fixed settable" >
       <thead>
         <tr>
           <th class="col-xs-2">{{ 'No' | translate }}</th>
-          <th class="col-xs-2">{{ 'User Type' | translate }}</th>
-          <th class="col-xs-2">{{ 'Page' | translate }}</th>
+          <th class="col-xs-2">User Type
+          </th>
+          <th class="col-xs-3">{{ 'Page' | translate }}</th>
           <th class="col-xs-2">{{ 'Url' | translate }}</th>
-          <th class="col-xs-3" style="margin-left: 20px">Action</th>
+          
+          <th class="col-xs-3">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let pageAsso of allPageAssoList | paginate: { itemsPerPage: 8, currentPage: p} let i = index;">
+      <tr *ngFor="let pageAsso of allPageAssoList| paginate: { itemsPerPage: 8, currentPage: p} let i= index">
         <td class="tablerow col-xs-2">{{i+1}}</td>
         <td class="tablerow col-xs-2">{{pageAsso.usertypeId.usertypeName}}</td>
-        <td class="tablerow col-xs-2  ">{{pageAsso.page.pageName}}</td>
-        <td class="tablerow col-xs-2 ">{{pageAsso.page.url}}</td>
+        <td class="tablerow col-xs-3">{{pageAsso.page.pageName}}</td>
+        <td class="tablerow col-xs-2">{{pageAsso.page.url}}</td>
 
         <td class="tablerow col-xs-3">
-          <span class="action-link" role="button" tabindex="0" (click)="loadPageAssoToEdit(pageAsso.id)" data-toggle="modal" data-target="#myModal">{{'Edit'| translate}}</span>
+          <span class="action-link" role="button" tabindex="0" (click)="loadPageAssoToEdit(pageAsso.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
-          <span class="action-link" role="button" tabindex="0" (click)="deletePage(pageAsso.id)">{{'Delete'|translate}}</span>
+          <span class="action-link" role="button" tabindex="0" (click)="deletePageAsso(pageAsso.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
     </table>
@@ -75,7 +78,7 @@
               <app-control-messages [formGroup]="pageAssoForm" [displayName]="'Page'" [control]="pageAssoForm.controls['page']"></app-control-messages>
             </div>
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6" >
+              <div class=" form-group col-lg-6">
                 <button type="button" class="added-multiple" (click)="addPage()">Add Pages</button>
               </div>
             </div>
@@ -85,13 +88,13 @@
               <tr>
                 <th class="col-xs-6">{{ 'No' | translate }}</th>
                 <th class="col-xs-6">{{ 'Page Name' | translate }}</th>
-               
+
               </tr>
             </thead>
             <tr *ngFor="let pageAsso of pageAssoIdData | paginate: { itemsPerPage: 8, currentPage: p} let i = index;">
               <td class="tablerow col-xs-6">{{i+1}}</td>
               <td class="tablerow col-xs-6  ">{{pageAsso}}</td>
-            
+
             </tr>
           </table>
           <div class="savebtn">
