--- a/src/app/components/my-leaveapplication/my-leaveapplication.component.css
+++ b/src/app/components/my-leaveapplication/my-leaveapplication.component.css
@@ -2,3 +2,8 @@
     text-align: left;
     line-height: 3.5rem;
 }
+.norequest{
+    margin-left: 50px;
+    margin-top: 20px;
+    font-size: 30px;
+}
