<add new componenet regularization>

--- a/src/app/components/designation/designation.component.html
+++ b/src/app/components/designation/designation.component.html
@@ -54,7 +54,7 @@
       <div id="snackbar" [innerHTML]="toastMessage"></div>
       <div class="modal-content" style="    height: 500px;">
         <div class="modal-header dialog">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <button type="button" class="close modalCloseIcon" data-dismiss="modal">&times;</button>
           <h2 class="modal-title modaltitle">{{'Add New Designation'|translate}}</h2>
         </div>
         <div class="modal-body">
