--- a/src/app/components/selfattendance/selfattendance.component.html
+++ b/src/app/components/selfattendance/selfattendance.component.html
@@ -3,6 +3,10 @@
     <header class="header">
       <div class="heading4">{{'Self Attendance'|translate}}</div>
     </header>
+    <br>
+    <br>
+    <button class="btn btn-primary adduser" type="button" (click)="redirectToRegularization()">{{'Regularization '| translate}}
+    </button>
     <div class="addbtn">
       <div layout="row" class="userlist ">{{' Self Attendance List' | translate}}
 
