--- a/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
+++ b/src/app/components/usertype-pageassociation/usertype-pageassociation.component.html
@@ -50,7 +50,7 @@
       <div id="snackbar" [innerHTML]="toastMessage"></div>
       <div class="modal-content">
         <div class="modal-header dialog">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <button type="button" class="close modalCloseIcon" data-dismiss="modal">&times;</button>
           <h2 class="modal-title modaltitle">{{'UserType Page Association' |translate}}</h2>
         </div>
         <div class="modal-body">
