--- a/src/app/components/selfattendance/selfattendance.component.css
+++ b/src/app/components/selfattendance/selfattendance.component.css
@@ -67,3 +67,16 @@
     text-align: left;
     line-height: 3.5rem;
 }
+
+.adduser {
+    width: 17%;
+    height: 40px;
+    background-color: #111111;
+    color: white;
+    margin-left: 20px;
+}
+.addbtn {
+    margin-top: 3%;
+    width: 110%;
+    margin-left: 5.5%;
+}
